<resources>
    <string name="app_name">Assignment3</string>
    <string name="name">Name:</string>
    <string name="please_enter_the_name">Please Enter the name</string>
    <string name="registration">Registration</string>
    <string name="your_name_here">Your name here</string>
    <string name="mobile_no">Mobile No</string>
    <string name="mobile_number">Mobile Number:</string>
    <string name="address">Address :</string>
    <string name="validate">Validate</string>
    <string name="register">Register</string>
    <string name="clear">Clear</string>
    <string name="clear_text">Clear Text</string>
    <string name="proceed">Proceed</string>
    <string name="todo">TODO</string>
    <string name="title_activity_billing">BillingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>