<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/pale_green"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textColor="@color/tomato"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="40sp"
        android:textSize="30sp"
        tools:ignore="InefficientWeight" />

    <LinearLayout
        android:layout_marginTop="50sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="80sp"
            android:text="@string/name"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/your_name_here"
            android:id="@+id/nameEditText"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20sp"
            android:text="@string/mobile_number"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_no"
            android:id="@+id/mobileNoEditText"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="65sp"
            android:text="@string/address"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/your_name_here"
            android:id="@+id/addressEditText"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/validateButton"
            android:text="@string/validate"
            android:textColor="@color/antique_white"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/RegisterId"
            android:text="@string/register"
            android:textColor="@color/antique_white"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cleartextid"
            android:layout_margin="10dp"
            android:text="@string/clear_text"
            android:textColor="@color/antique_white"/>
    </LinearLayout>

</LinearLayout>